<resources>
    <string name="app_name">DiaBeatDis_android</string>
    <string name="hint_identifier">(Identifier)</string>
    <string name="button_enter">Enter</string>
    <string name="button_new_user">New User</string>
    <string name="button_back">Back</string>
    <string name="check_doctor">Doctor</string>
    <string name="check_admin">Admin</string>
    <string name="check_health_worker">Health Worker</string>
    <string name="hint_password">(Password)</string>
    <string name="hint_mobile_number">Mobile Number (e.g. XXX-XXX-XXX)</string>
    <string name="string_i_am_a">I am a:</string>
    <string name="string_enter_id">Enter ID:</string>
    <string name="string_enter_password">Enter Password:</string>
    <string name="string_enter_mobile_phone">Enter Mobile Phone:</string>
    <string name="button_enter_patient_data">Enter Patient Data</string>
    <string name="button_calibrate_device">Calibrate Device</string>
    <string name="button_message_to_doctor">Message To Doctor</string>
    <string name="button_logout">Logout</string>
    <string name="button_view_messages">View Messages</string>
    <string name="button_user_summaries">User Summaries</string>
    <string name="button_download_data">Download Data</string>
    <string name="button_user_lookup">User Lookup</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="button_patient_summary">Patient Summary</string>
    <string name="button_patient_lookup">Patient Lookup</string>
    <string name="button_reset_system">Reset System</string>
    <string name="button_device_statistics">Device Statistics</string>
    <string name="button_manage_accounts">Manage Accounts</string>
    <string name="button_new_patient">New Patient</string>
    <string name="string_enter_patient_id">Enter Patient ID:</string>
    <string name="button_glucose_test">Glucose Test</string>
    <string name="button_waist_circumference">Waist Circumference</string>
    <string name="button_change_patient">Change Patient</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="string_risk_catagories">Risk Catagories:</string>
    <string name="string_sex">Sex:</string>
    <string name="string_age">Age:</string>
    <string name="string_location">Location:</string>
    <string name="check_diabetic">Diabetic</string>
    <string name="check_at_risk">At risk</string>
    <string name="check_not_at_risk">Not at risk</string>
    <string name="check_unknown">Unknown</string>
    <string name="check_male">Male</string>
    <string name="check_female">Female</string>
    <string name="string_min">Min:</string>
    <string name="string_max">Max:</string>
    <string name="string_enter_user_id">Enter User ID:</string>
    <string name="string_type">User Type:</string>
    <string name="string_training_level">Training Level:</string>
    <string name="check_proficient">Proficient</string>
    <string name="check_limited">Limited</string>
    <string name="check_none">Untrained</string>
    <string name="string_data_active">Data Active:</string>
    <string name="string_new_health_worker_can_register">New Health Workers Can Register</string>
    <string name="string_memory_usage">Memory Usage:</string>
    <string name="string_clear_memory">Clear Memory:</string>
    <string name="check_glucose_ir">Glucose IR</string>
    <string name="check_blood_pressure">Blood Pressure</string>
    <string name="check_triglyceride">Triglyceride</string>
    <string name="check_weight">Weight</string>
    <string name="check_height">Height</string>
    <string name="check_diet">Diet</string>
    <string name="check_exercise">Exercise</string>
    <string name="check_messages">Messages</string>
    <string name="check_video">Video</string>
    <string name="check_images">Images</string>
    <string name="check_text">Text</string>
    <string name="check_patient_data">Patient Data</string>
    <string name="check_user_data">User Data</string>
    <string name="button_clear">Clear</string>
    <string name="string_patient_id">Patient ID:</string>
    <string name="string_name">Name:</string>
    <string name="string_mobile">Mobile:</string>
    <string name="hint_name">Name (e.g. Andy Zhang)</string>
    <string name="hint_location">Location (e.g. New Delhi, India)</string>
    <string name="hint_age">Age (e.g. 25)</string>
    <string name="hint_sex">Sex (e.g. M)</string>
    <string name="button_cancel">Cancel</string>
    <string name="string_subject">Subject:</string>
    <string name="hint_subject">(Subject)</string>
    <string name="string_message">Message:</string>
    <string name="hint_message">(Message)</string>
    <string name="button_send">Send</string>
    <string name="button_emergency_contact_doctor">Emergency - Contact Doctor</string>
    <string name="string_record">Record</string>
    <string name="string_photo">Photo</string>
    <string name="button_search">Search</string>
    <string name="prompt_and_or">And/Or</string>
    <string-array name="and_or">
        <item>And</item>
        <item>Or</item>
    </string-array>
    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="button_show_voltage">Show Voltage</string>
    <string name="button_test_again">Test Again</string>
    <string name="button_enter_other_data">Enter Other Data</string>
    <string name="string_test_error">Something went wrong.</string>
    <string name="button_contact_doctor">Contact Doctor</string>
    <string name="string_emergency_message">Very high glucose. Try testing again, and if glucose is still high contact a doctor immediately.</string>
    <string name="string_re_enter_password">Re-Enter Password:</string>
    <string name="string_download_data_using">Download data through:</string>
    <string name="string_voltage_reading">The voltage reading is:</string>
    <string name="button_record_voltage">Record Voltage</string>
    <string name="string_recording_successful">Recording Successful</string>
    <string name="button_back_to_patient_lookup">Back to Patient Lookup</string>
    <string name="pref_can_health_worker_register">true</string>
    <string name="string_load_cartridge">1. Load Cartridge</string>
    <string name="string_prick_finger">2. Prick Finger</string>
    <string name="string_collect_blood">3. Collect Blood</string>
    <string name="string_voltage_reading_min">The voltage reading (min) is:</string>
    <string name="string_record_data_clicks">\"Record Data\" Clicks:</string>
    <string name="string_download_data_clicks">\"Download Data\" Clicks:</string>
    <string name="string_patient_summary_clicks">\"Patient Summary\" Clicks:</string>
    <string name="string_patient_lookup_clicks">\"Patient Lookup\" Clicks:</string>
    <string name="string_user_lookup_clicks">\"User Lookup\" Clicks:</string>
    <string name="string_messages_sent">Messages Sent:</string>
    <string name="string_number_of_patients">Number of patients in the record:</string>
    <string name="string_number_of_users">Number of users in the record:</string>
    <string name="string_device_statistics">Device Statistics</string>
    <string name="string_follow_steps">Please follow the 3-step instruction before collecting data, once you complete a step, click the check box below to move on!</string>
    <string name="check_collection_step_one">Step 1: load cartridge</string>
    <string name="check_collection_step_two">Step 2: prick finger</string>
    <string name="check_collection_step_three">Step 3: transfer blood</string>
    <string name="button_done">Done!</string>
    <string name="string_your_id_will_be">Your user ID will be:</string>
    <string name="string_measure">Measure</string>
    <string name="button_delete">Delete</string>
    <string name="delete_account_warning">Enter the ID of the user account you want to delete. Please be ware that this step is irreversible</string>
    <string name="check_attach_patient_data">Attach Patient Data</string>
    <string name="string_message_doctor_warning">Check the above box to attach your most recent patient data to the doctor along with the message. If not, please specify the patient ID or relevant information for doctor to identify the patient!</string>
    <string name="radio_usb_access">USB access</string>
    <string name="radio_bluetooth">Bluetooth (in future version)</string>
    <string name="string_last_time_ingestion">When is the last time the patient had any food (liquid other than water counts)?</string>
    <string name="radio_less_2_hr"> in less than 2 hours</string>
    <string name="radio_larger_2_hr">more than 2 hours ago</string>
</resources>
