<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peter.diabeatdis_android.DeviceSettingActivity">

    <CheckBox
        android:id="@+id/checkBox17"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_weight"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox16" />

    <CheckBox
        android:id="@+id/checkBox18"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_height"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox17" />

    <CheckBox
        android:id="@+id/checkBox19"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_diet"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox18" />

    <CheckBox
        android:id="@+id/checkBox20"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_exercise"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox19" />

    <CheckBox
        android:id="@+id/checkBox_device_setting_patient_data"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_patient_data"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/checkBox24" />

    <CheckBox
        android:id="@+id/checkBox_device_setting_user_data"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_user_data"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_device_setting_patient_data" />

    <CheckBox
        android:id="@+id/checkBox21"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_messages"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <CheckBox
        android:id="@+id/checkBox22"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/check_images"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/checkBox23" />

    <CheckBox
        android:id="@+id/checkBox24"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/check_text"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/checkBox22" />

    <CheckBox
        android:id="@+id/checkBox23"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:text="@string/check_video"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/checkBox21" />

    <CheckBox
        android:id="@+id/checkBox16"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_triglyceride"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox10" />

    <CheckBox
        android:id="@+id/checkBox10"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:text="@string/check_blood_pressure"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox15" />

    <CheckBox
        android:id="@+id/checkBox15"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="178dp"
        android:layout_height="20dp"
        android:text="@string/button_waist_circumference"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/checkBox14" />

    <CheckBox
        android:id="@+id/checkBox14"
        style="@android:style/Widget.Material.Light.CompoundButton.CheckBox"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:text="@string/check_glucose_ir"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/string_clear_memory"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_memory_usage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="128dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/string_new_health_worker_can_register"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/button42" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_data_active"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <Button
        android:id="@+id/button42"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="backToMainMenu"
        android:text="@string/button_main_menu"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/button43"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button43"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:onClick="logOut"
        android:text="@string/button_logout"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear_memory"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="clearMemory"
        android:text="@string/button_clear"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="@+id/checkBox_device_setting_user_data"
        app:layout_constraintStart_toStartOf="@+id/checkBox_device_setting_user_data"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_device_setting_user_data" />

    <CheckBox
        android:id="@+id/checkBox_device_setting_can_health_worker_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

</android.support.constraint.ConstraintLayout>
