<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.peter.diabeatdis_android.PatientSelectorActivity">

    <Button
        android:id="@+id/button53"
        android:layout_width="106dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="backToMainMenu"
        android:text="@string/button_main_menu"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/button23"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button23"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="logOut"
        android:text="@string/button_logout"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button24"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="messageDoctor"
        android:text="@string/button_message_to_doctor"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/button53"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="newPatientRegistration"
        android:text="@string/button_new_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_patient_select_id" />

    <EditText
        android:id="@+id/editText_patient_select_id"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/hint_identifier"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:onClick="searchPatient"
        android:text="@string/button_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_patient_select_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_enter_patient_id"
        app:layout_constraintBottom_toTopOf="@+id/editText_patient_select_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
